# game-perf-monitor

./: .gitignore  CMakeLists.txt  ONBOARDING.md  README.md  build-and-run.ps1  vcpkg.json
.github/workflows/: windows-build.yml
resources/icons/: README.md
resources/qss/: hud.qss  rtss.qss
src/app/: AppMain.cpp  AppMain.h  PrivilegeGuard.cpp  PrivilegeGuard.h  SettingsCenter.cpp  SettingsCenter.h  main.cpp
src/game/: GameMatcher.cpp  GameMatcher.h
src/sampler/: AdapterRegistry.cpp  AdapterRegistry.h  DataBus.cpp  DataBus.h  IDataAdapter.h  SamplerService.cpp  SamplerService.h
src/sampler/mock/: MockAdapterBase.h  MockCpuAdapter.h  MockFanAdapter.h  MockFpsAdapter.h  MockFrameTimeAdapter.h  MockGpuAdapter.h  MockNetAdapter.h  MockPowerAdapter.h  MockRamAdapter.h  MockThermalAdapter.h  MockVoltageAdapter.h  MockVramAdapter.h
src/storage/: ConfigStore.cpp  ConfigStore.h  GameConfigStore.cpp  GameConfigStore.h  GameProfile.cpp  GameProfile.h  JsonStore.cpp  JsonStore.h
src/ui/hud/: HudFieldDelegate.cpp  HudFieldDelegate.h  HudFieldModel.cpp  HudFieldModel.h  HudLayoutEngine.cpp  HudLayoutEngine.h  HudWindow.cpp  HudWindow.h
src/ui/main/: GameEditDialog.cpp  GameEditDialog.h  MainWindow.cpp  MainWindow.h  RealtimePanel.cpp  RealtimePanel.h  SettingsPage.cpp  SettingsPage.h
src/util/: Logger.cpp  Logger.h  PathProvider.cpp  PathProvider.h  PlatformUtils.cpp  PlatformUtils.h  SampleBlock.h
